design(landscape,large). Also i believe that i1ve removed all mistakes, i hope everything is good

--- a/app/src/main/res/layout-land/activity_set_passwd.xml
+++ b/app/src/main/res/layout-land/activity_set_passwd.xml
@@ -53,6 +53,7 @@
                         android:inputType="textPassword"
                         android:gravity="center"
                         android:ellipsize="start"
+                        android:maxLength="16"
                         android:singleLine="true"
                         android:textSize="30dp"
                         android:text=""
