--- a/app/src/main/res/layout/activity_set_passwd.xml
+++ b/app/src/main/res/layout/activity_set_passwd.xml
@@ -50,6 +50,7 @@
                         android:ellipsize="start"
                         android:singleLine="true"
                         android:textSize="30dp"
+                        android:maxLength="16"
                         android:text=""
                         android:background="@drawable/template_for_tv_in_set_user_name" />
 
