--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -97,14 +97,14 @@
                 android:id="@+id/containerForLogOutFab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:layout_alignParentBottom="true">
+                android:paddingRight="20dp"
+                android:layout_below="@id/containerForBtnCharts">
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/fabLogOut"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginBottom="130dp"
+
                     android:focusable="true"
                     android:clickable="true"
                     app:fabSize="normal"
@@ -124,11 +124,12 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
+                android:paddingRight="20dp"
                 android:id="@+id/containerForUserFab"
-                android:layout_marginBottom="70dp"
-                android:layout_above="@id/containerForSettingsFab"
-                android:layout_alignParentBottom="true">
+
+
+                android:layout_below="@id/containerForLogOutFab"
+                >
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/fabSettingsOfUser"
@@ -179,7 +180,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:layout_alignParentBottom="true">
+                android:layout_below="@id/containerForUserFab"
+                >
                 <ImageButton
                     android:id="@+id/addGoodBtn"
                     android:layout_width="wrap_content"
