--- a/app/src/main/res/layout-land/slide_template.xml
+++ b/app/src/main/res/layout-land/slide_template.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
-
+    android:background="@color/black"
+    android:orientation="vertical">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <ImageView
             android:id="@+id/iconOfSlide"
             android:layout_width="wrap_content"
@@ -29,6 +36,6 @@
             android:layout_below="@id/iconOfSlide"
             />
 
-
-
-</RelativeLayout>
+        </RelativeLayout>
+        </ScrollView>
+</LinearLayout>
