--- a/app/src/main/res/layout-large/activity_sign_in.xml
+++ b/app/src/main/res/layout-large/activity_sign_in.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/editTextLogin"
                 android:layout_width="521dp"
                 android:layout_height="73dp"
-
+                android:maxLength="20"
                 android:layout_centerHorizontal="true"
 
 
@@ -52,7 +52,7 @@
 
                 android:layout_centerHorizontal="true"
 
-
+                android:maxLength="16"
                 android:background="@drawable/body_for_edit_text"
                 android:hint="@string/string_passwd"
                 android:inputType="textPassword"
