--- a/app/src/main/res/layout-large/fragment_helper.xml
+++ b/app/src/main/res/layout-large/fragment_helper.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:padding="20dp"
+            android:layout_centerHorizontal="true">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -20,24 +22,24 @@
                 android:text="Чтобы получить совет ответьте на пару вопросов"
                 android:textColor="@color/white"
                 android:textSize="30dp"
-                android:gravity="center"
+                android:layout_centerInParent="true"
                 />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:padding="20dp"
+            android:layout_centerInParent="true">
             <ImageView
                 android:id="@+id/arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/arrow"
                 android:layout_centerInParent="true"
-                android:layout_alignParentBottom="true"
-                android:paddingBottom="200dp"/>
+                />
         </RelativeLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
