--- a/app/src/main/res/layout-large/good_template.xml
+++ b/app/src/main/res/layout-large/good_template.xml
@@ -94,8 +94,8 @@
 
                 <TextView
                     android:id="@+id/essayOfGood"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="69dp"
 
                     android:layout_marginStart="4dp"
                     android:layout_marginLeft="4dp"
