--- a/app/src/main/res/layout-large/slide_template.xml
+++ b/app/src/main/res/layout-large/slide_template.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:orientation="vertical">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                        <ImageView
+                            android:id="@+id/iconOfSlide"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_alignParentTop="true"
+                            android:src="@drawable/clock_icon_for_slider"
+                            android:layout_marginTop="90dp"
 
-        <ImageView
-            android:id="@+id/iconOfSlide"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/clock_icon_for_slider"
-            android:layout_marginTop="90dp"
+                            />
 
-            />
+                        <TextView
+                            android:id="@+id/lblOfSlide"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:textSize="32dp"
+                            android:text="Обдумайте значимые покупки с помощью “Таймера”"
+                            android:gravity="center"
+                            android:layout_centerInParent="true"
+                            android:paddingTop="60dp"
+                            android:layout_below="@id/iconOfSlide"
+                            />
 
-        <TextView
-            android:id="@+id/lblOfSlide"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="32dp"
-            android:text="Обдумайте значимые покупки с помощью “Таймера”"
-            android:gravity="center"
-            android:layout_centerInParent="true"
-            android:paddingTop="60dp"
-            android:layout_below="@id/iconOfSlide"
-            />
-
-
-
-</RelativeLayout>
+                </RelativeLayout>
+        </ScrollView>
+</LinearLayout>
