--- a/app/src/main/res/layout-small/activity_sign_in.xml
+++ b/app/src/main/res/layout-small/activity_sign_in.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/editTextLogin"
                 android:layout_width="321dp"
                 android:layout_height="53dp"
-
+                android:maxLength="20"
                 android:layout_centerHorizontal="true"
 
 
@@ -48,7 +48,7 @@
                 android:layout_height="53dp"
 
                 android:layout_centerHorizontal="true"
-
+                android:maxLength="16"
 
                 android:background="@drawable/body_for_edit_text"
                 android:hint="@string/string_passwd"
