--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".QuestionsActivity"
+    android:orientation="vertical"
     android:background="@color/black">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:paddingBottom="30dp">
-
-
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            >
-           <TextView
-               android:id="@+id/lblQuestion"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:textSize="30dp"
-               android:gravity="left"
-               android:textColor="@color/white"
-               />
+            android:layout_marginTop="100dp">
+            <TextView
+                android:id="@+id/lblQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:gravity="left"
+                android:textColor="@color/white"
+                />
         </RelativeLayout>
 
         <RelativeLayout
@@ -90,6 +83,5 @@
                 android:padding="15dp"/>
         </RelativeLayout>
 
-    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
