--- a/app/src/main/res/layout/activity_set_user.xml
+++ b/app/src/main/res/layout/activity_set_user.xml
@@ -126,6 +126,7 @@
                 android:singleLine="true"
                 android:text=""
                 android:maxLength="20"
+
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30dp" />
@@ -218,6 +219,7 @@
                         android:text="23,4,432222"
                         android:layout_marginLeft="30dp"
                         android:ellipsize="start"
+                        android:singleLine="true"
                         android:inputType="numberDecimal|number"/>
 
                     <TextView
