--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -26,8 +26,7 @@
                 android:layout_height="53dp"
 
                 android:layout_centerHorizontal="true"
-
-
+                android:maxLength="20"
                 android:background="@drawable/body_for_edit_text"
                 android:hint="@string/string_login"
                 android:inputType="textPersonName"
@@ -48,8 +47,7 @@
                 android:layout_height="53dp"
 
                 android:layout_centerHorizontal="true"
-
-
+                android:maxLength="16"
                 android:background="@drawable/body_for_edit_text"
                 android:hint="@string/string_passwd"
                 android:inputType="textPassword"
@@ -61,7 +59,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:padding="20dp"
+            >
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonEnter"
                 android:layout_width="274dp"
