--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -7,13 +7,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black">
 
- <LinearLayout
+ <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
-     android:orientation="vertical">
-
+     android:orientation="vertical"
+     android:layout_gravity="center">
 
   <RelativeLayout
+      android:id="@+id/containerForTheFirstPart"
+      android:layout_alignParentTop="true"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      >
+  <RelativeLayout
+      android:id="@+id/containerForCategory"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp">
@@ -39,13 +46,15 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
-       android:layout_alignParentRight="true"
-       android:layout_marginRight="50dp"
+       android:layout_toRightOf="@id/categoryDropDown"
+       android:layout_marginLeft="-50dp"
        android:src="@drawable/selectorforspinner"
        android:layout_marginTop="60dp"/>
   </RelativeLayout>
 
   <RelativeLayout
+      android:id="@+id/containerForName"
+      android:layout_below="@id/containerForCategory"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp">
@@ -71,9 +80,21 @@
        android:layout_marginTop="50dp"/>
   </RelativeLayout>
 
+  </RelativeLayout>
+
+  <RelativeLayout
+      android:id="@+id/containerForTheSecondPart"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+
+      android:padding="10dp"
+      >
+
 
 
   <RelativeLayout
+      android:id="@+id/containerForCost"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp">
@@ -104,10 +125,11 @@
        android:id="@+id/currencyOfCostInAddGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_centerHorizontal="true"
-       android:layout_alignParentRight="true"
-       android:layout_marginTop="50dp"
+       android:layout_toRightOf="@id/txtCostOfGood"
+       android:layout_alignBottom="@id/txtCostOfGood"
+       android:layout_marginLeft="-40dp"
        android:textColor="@color/black"
+       android:text="p"
        android:textSize="29dp"
        android:layout_marginRight="70dp"/>
 
@@ -115,9 +137,11 @@
   </RelativeLayout>
 
   <RelativeLayout
+      android:layout_below="@id/containerForCost"
+      android:id="@+id/containerForPurchaseOfPurpose"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:padding="5dp">
+      android:padding="15dp">
 
 
    <EditText
@@ -130,34 +154,37 @@
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:maxLength="120"
-       android:layout_marginTop="40dp"
+       android:maxLines="5"
        android:background="@drawable/body_for_edit_text"/>
    <TextView
        android:id="@+id/counterOfTextInputAddGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_centerHorizontal="true"
-       android:layout_alignParentRight="true"
+       android:layout_toRightOf="@id/txtPurchaseOfPurpose"
+       android:layout_alignBottom="@id/txtPurchaseOfPurpose"
+       android:layout_marginLeft="-65dp"
+       android:layout_marginBottom="5dp"
        android:text="0/120"
        android:textSize="17dp"
-       android:layout_marginTop="135dp"
-       android:layout_marginRight="70dp"/>
+       />
+  </RelativeLayout>
   </RelativeLayout>
 
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:padding="5dp">
+      android:layout_below="@id/containerForTheSecondPart"
+      android:layout_above="@id/containerForHistoryBtn"
+      android:padding="15dp">
    <ImageButton
        android:id="@+id/btnAddGoodInFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
-       android:layout_centerHorizontal="true"
+       android:layout_centerInParent="true"
        android:foreground="?android:attr/selectableItemBackground"
-       android:layout_marginTop="20dp"
+       android:padding="20dp"
        app:srcCompat="@drawable/addgoodbtn"
-
        tools:ignore="VectorDrawableCompat"
 
        />
@@ -166,9 +193,11 @@
 
 
   <RelativeLayout
+      android:id="@+id/containerForHistoryBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:padding="5dp">
+      android:padding="15dp"
+      android:layout_alignParentBottom="true">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
@@ -185,7 +214,8 @@
   </RelativeLayout>
 
 
- </LinearLayout>
+ </RelativeLayout>
+
  <ProgressBar
      android:id="@+id/progressBarInAddGood"
      android:layout_width="wrap_content"
